Finished the contact us page with map component only the text color fix left for the dark mode

--- a/frontend/src/styles/components.css
+++ b/frontend/src/styles/components.css
@@ -4,9 +4,10 @@
 }
 
 
-input::placeholder{
+input::placeholder, textarea::placeholder{
   color: #656565
 }
+
 
 .dark input::placeholder{
   @apply text-gray-300;
